--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -126,6 +126,8 @@
           href: Toolkit/KryptonFontDialog.md
         - name: KryptonInputBox
           href: Toolkit/KryptonInputBox.md
+        - name: KryptonIntegratedToolBarManager
+          href: Toolkit/KryptonIntegratedToolBarManager.md
         - name: KryptonManager
           href: Toolkit/KryptonManager.md
         - name: KryptonMessageBox
