--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -4104,6 +4104,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Toolkit/KryptonIntegratedToolBarManager.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Toolkit/KryptonIntegratedToolBarManager.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Toolkit/KryptonLabel.md",
       "output": {
         ".html": {
