--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -148,6 +148,10 @@
       items:
         - name: KryptonForm
           href: Toolkit/KryptonForm.md
+    - name: Theming
+      items:
+        - name: HowThemesWork
+          href: Toolkit/HowThemesWork.md
 - name: Ribbon
   href: Krypton_Ribbon.md
   items:
