--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -3333,6 +3333,16 @@
       "version": ""
     },
     {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Toolkit/HowThemesWork.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Toolkit/HowThemesWork.html"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Resource",
       "source_relative_path": "articles/Toolkit/KMB.png",
       "output": {
@@ -4608,6 +4618,16 @@
       "output": {
         "resource": {
           "relative_path": "articles/Toolkit/StatusStripMergingTrue.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Toolkit/ThemeColorDescriptions.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Toolkit/ThemeColorDescriptions.html"
         }
       },
       "version": ""
