--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -290,3 +290,7 @@
       href: Support/Krypton Toolkit Suite Standard Modules.md
     - name: Package Support Information
       href: Support/Package Support Information.md
+    - name: Package Version Descriptions
+      href: Support/Package Version Descriptions.md
+    - name: Using Krypton Packages
+      href: Support/Using Krypton Packages.md
