--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -292,5 +292,7 @@
       href: Support/Package Support Information.md
     - name: Package Version Descriptions
       href: Support/Package Version Descriptions.md
+    - name: Reporting a Issue
+      href: Support/Reporting a Issue.md
     - name: Using Krypton Packages
       href: Support/Using Krypton Packages.md
