--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -2984,6 +2984,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Support/Reporting a Issue.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Reporting a Issue.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Support/Using Krypton Packages.md",
       "output": {
         ".html": {
