--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -286,6 +286,8 @@
       href: Support/Designer Fix.md
     - name: Removal of IPalette
       href: Support/IPalette Removal.md
+    - name: Joining Our Discord Server
+      href: Support/Joining Our Discord Server.md
     - name: Krypton Toolkit Suite Standard Modules
       href: Support/Krypton Toolkit Suite Standard Modules.md
     - name: Package Support Information
