--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -2954,6 +2954,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Support/Joining Our Discord Server.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Joining Our Discord Server.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Support/Krypton Toolkit Suite Standard Modules.md",
       "output": {
         ".html": {
