--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -1,5 +1,5 @@
 {
-  "source_base_path": "D:/Development/Krypton/Standard-Toolkit-Online-Help/Source/Help/DocFX",
+  "source_base_path": "D:/Source Code/Krypton/Standard-Toolkit-Online-Help/Source/Help/DocFX",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
@@ -3373,6 +3373,16 @@
       "version": ""
     },
     {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonAboutBoxSimple.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonAboutBoxSimple.png"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "articles/Toolkit/KryptonBorderEdge.md",
       "output": {
@@ -3663,6 +3673,26 @@
       "version": ""
     },
     {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonColorDialog.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonColorDialog.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonColorDialogExpanded.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonColorDialogExpanded.png"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "articles/Toolkit/KryptonComboBox.md",
       "output": {
@@ -3938,6 +3968,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Toolkit/KryptonFontDialog.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonFontDialog.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonFontDialog.png"
         }
       },
       "version": ""
@@ -4363,6 +4403,16 @@
       "version": ""
     },
     {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonOpenFileDialog.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonOpenFileDialog.png"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "articles/Toolkit/KryptonOutlookGrid.md",
       "output": {
@@ -4403,6 +4453,16 @@
       "version": ""
     },
     {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonPrintDialog.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonPrintDialog.png"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "articles/Toolkit/KryptonProgressBar.md",
       "output": {
@@ -4418,6 +4478,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Toolkit/KryptonPropertyGrid.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonPropertyGrid.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonPropertyGrid.png"
         }
       },
       "version": ""
@@ -4513,6 +4583,26 @@
       "version": ""
     },
     {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonTaskDialogAll.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonTaskDialogAll.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonTaskDialogProps.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonTaskDialogProps.png"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "articles/Toolkit/KryptonTextBox.md",
       "output": {
@@ -4528,6 +4618,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Toolkit/KryptonThemeBrowser.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonThemeBrowser.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonThemeBrowser.png"
         }
       },
       "version": ""
@@ -4593,11 +4693,51 @@
       "version": ""
     },
     {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonTreeViewCheckBox.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonTreeViewCheckBox.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonTreeViewInputControlStyle.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonTreeViewInputControlStyle.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonTreeViewTreeNode.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonTreeViewTreeNode.png"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Conceptual",
       "source_relative_path": "articles/Toolkit/KryptonWebBrowser.md",
       "output": {
         ".html": {
           "relative_path": "articles/Toolkit/KryptonWebBrowser.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Toolkit/KryptonWebBrowser.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Toolkit/KryptonWebBrowser.png"
         }
       },
       "version": ""
