--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -278,6 +278,8 @@
 - name: Support
   href: Support.md
   items:
+    - name: Breaking Changes
+      href: Support/Breaking Changes.md
     - name: How to Install Pre Release Packages
       href: Support/How to Install Pre Release Packages.md
     - name: Installing Krypton
