--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -2904,6 +2904,26 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Support/Breaking Changes Archive/Version 70 Breaking Changes.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Breaking Changes Archive/Version 70 Breaking Changes.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Support/Breaking Changes.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Breaking Changes.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Support/Designer Fix.md",
       "output": {
         ".html": {
