--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -181,6 +181,43 @@
        href: Ribbon/ItemEvents.md
      - name: KryptonGallery
        href: Ribbon/KryptonGallery.md
+- name: Navigator
+  href: Krypton_Navigator.md
+  items:
+    - name: Overview
+      href: Navigator\Navigator Overview.md
+    - name: KryptonPage
+      href: Navigator\Navigator KryptonPage.md
+    - name: Modes
+      href: Navigator\Navigator Modes.md
+    - name: PageDragging
+      href: Navigator\Navigator Page Dragging.md
+    - name: PopupPages
+      href: Navigator\Navigator PopupPages.md
+    - name: ToolTips
+      href: Navigator\Navigator ToolTips.md
+    - name: Other Properties
+      href: Navigator\Navigator Other Properties.md
+    - name: Bar Modes
+      href: Navigator\Navigator Bar Modes.md
+    - name: Button Modes
+      href: Navigator\Navigator Button Modes.md
+    - name: Group Modes
+      href: Navigator\Navigator Group Modes.md
+    - name: Header Modes
+      href: Navigator\Navigator Header Modes.md
+    - name: Outlook Modes
+      href: Navigator\Navigator Outlook Modes.md
+    - name: Panel Modes
+      href: Navigator\Navigator Panel Modes.md
+    - name: Stack Modes
+      href: Navigator\Navigator Stack Modes.md
+    - name: Selection Events
+      href: Navigator\Navigator Selection Events.md
+    - name: Action Events
+      href: Navigator\Navigator Action Events.md
+    - name: Other Events
+      href: Navigator\Navigator Other Events.md
 - name: Workspace
   href: Krypton_WorkSpace.md
   items:
