--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -1284,10 +1284,10 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Navigator/Navigator PopupPages Properties.md",
+      "source_relative_path": "articles/Navigator/Navigator PopupPages.md",
       "output": {
         ".html": {
-          "relative_path": "articles/Navigator/Navigator PopupPages Properties.html"
+          "relative_path": "articles/Navigator/Navigator PopupPages.html"
         }
       },
       "version": ""
@@ -1314,10 +1314,10 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Navigator/Navigator Tooltips Properties.md",
+      "source_relative_path": "articles/Navigator/Navigator ToolTips.md",
       "output": {
         ".html": {
-          "relative_path": "articles/Navigator/Navigator Tooltips Properties.html"
+          "relative_path": "articles/Navigator/Navigator ToolTips.html"
         }
       },
       "version": ""
