* Update package listings

--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -2984,10 +2984,40 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Support/Krypton Module Versions.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Krypton Module Versions.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Support/Krypton Toolkit Suite Extended Modules.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Krypton Toolkit Suite Extended Modules.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Support/Krypton Toolkit Suite Standard Modules.md",
       "output": {
         ".html": {
           "relative_path": "articles/Support/Krypton Toolkit Suite Standard Modules.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Support/Krypton Toolkit Ultimate Modules.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Krypton Toolkit Ultimate Modules.html"
         }
       },
       "version": ""
