--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -327,8 +327,8 @@
       href: Support/IPalette Removal.md
     - name: Joining Our Discord Server
       href: Support/Joining Our Discord Server.md
-    - name: Krypton Toolkit Suite Standard Modules
-      href: Support/Krypton Toolkit Suite Standard Modules.md
+    - name: Module Versions
+      href: Support/Krypton Module Versions.md
     - name: Package Support Information
       href: Support/Package Support Information.md
     - name: Package Version Descriptions
