--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -106,6 +106,8 @@
               href: Standard Toolkit/Toolkit/KryptonThemeComboBox.md
             - name: KryptonThemeListBox
               href: Standard Toolkit/Toolkit/KryptonThemeListBox.md
+            - name: KryptonToggleSwitch
+              href: Standard Toolkit/Toolkit/KryptonToggleSwitch.md
             - name: KryptonToolStrip
               href: Standard Toolkit/Toolkit/KryptonToolStrip.md
             - name: KryptonTrackBar
