--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -1,5 +1,5 @@
 {
-  "source_base_path": "Z:/Source/Krypton/Standard-Toolkit-Online-Help/Source/Help/DocFX",
+  "source_base_path": "Z:/Source Code/Krypton/Standard-Toolkit-Online-Help/Source/Help/DocFX",
   "xrefmap": "xrefmap.yml",
   "files": [
     {
