--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -204,6 +204,26 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Using File Scoped Namespaces.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Using File Scoped Namespaces.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Using SLNX in Visual Studio.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Using SLNX in Visual Studio.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Contributing/Using the MSBuild Log Viewer.md",
       "output": {
         ".html": {
@@ -9608,16 +9628,6 @@
       "output": {
         ".html": {
           "relative_path": "articles/Support/Using Krypton Packages.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/Support/Using SLNX in Visual Studio.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/Support/Using SLNX in Visual Studio.html"
         }
       },
       "version": ""
