--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -325,6 +325,10 @@
       href: Contributing/How-to-Create-the-API-Reference.md
     - name: How to Manage 'Using' Statements
       href: Contributing/How-to-Manage-Using-Statements.md
+    - name: Using SLNX in Visual Studio
+      href: Contributing/Using SLNX in Visual Studio.md 
+    - name: Using File Scoped Namespaces
+      href: Contributing/Using File Scoped Namespaces.md
     - name: Using the MSBuild Log Viewer
       href: Contributing/Using the MSBuild Log Viewer.md
 - name: Support
@@ -354,5 +358,3 @@
       href: Support/Reporting a Issue.md
     - name: Using Krypton Packages
       href: Support/Using Krypton Packages.md
-    - name: Using SLNX in Visual Studio
-      href: Support/Using SLNX in Visual Studio.md 
