--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -114,6 +114,26 @@
     },
     {
       "type": "Resource",
+      "source_relative_path": "articles/Contributing/Images/Krypton Toolkit Suite SLN.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Images/Krypton Toolkit Suite SLN.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
+      "source_relative_path": "articles/Contributing/Images/Krypton Toolkit Suite SLNX.png",
+      "output": {
+        "resource": {
+          "relative_path": "articles/Contributing/Images/Krypton Toolkit Suite SLNX.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Resource",
       "source_relative_path": "articles/Contributing/Making a Pull Request/Build Log Example.png",
       "output": {
         "resource": {
@@ -198,6 +218,16 @@
       "output": {
         "resource": {
           "relative_path": "articles/Contributing/Making a Pull Request/Step 7.png"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Using Custom Pre Processor Directives.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Using Custom Pre Processor Directives.html"
         }
       },
       "version": ""
@@ -9414,6 +9444,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Support/Breaking Changes Archive/Version 8x Breaking Changes.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Support/Breaking Changes Archive/Version 8x Breaking Changes.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Support/Breaking Changes.md",
       "output": {
         ".html": {
@@ -9508,26 +9548,6 @@
       "output": {
         "resource": {
           "relative_path": "articles/Support/Images/DesignerBug.png"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Resource",
-      "source_relative_path": "articles/Support/Images/Krypton Toolkit Suite SLN.png",
-      "output": {
-        "resource": {
-          "relative_path": "articles/Support/Images/Krypton Toolkit Suite SLN.png"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Resource",
-      "source_relative_path": "articles/Support/Images/Krypton Toolkit Suite SLNX.png",
-      "output": {
-        "resource": {
-          "relative_path": "articles/Support/Images/Krypton Toolkit Suite SLNX.png"
         }
       },
       "version": ""
