--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -165,7 +165,7 @@
         - name: Theming
           href: Standard Toolkit/Toolkit/Theming.md
           items:
-            - name: HowThemesWork
+            - name: How Themes Work
               href: Standard Toolkit/Toolkit/HowThemesWork.md
     - name: Ribbon
       href: Standard Toolkit/Krypton_Ribbon.md
@@ -325,6 +325,8 @@
       href: Contributing/How-to-Create-the-API-Reference.md
     - name: How to Manage 'Using' Statements
       href: Contributing/How-to-Manage-Using-Statements.md
+    - name: Krypton RTL Audit Summary
+      href: Contributing/Krypton RTL Audit Summary.md
     - name: Using Custom Pre Processor Directives
       href: Contributing/Using Custom Pre Processor Directives.md
     - name: Using File Scoped Namespaces
