--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -133,6 +133,16 @@
       "version": ""
     },
     {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Krypton RTL Audit Summary.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Krypton RTL Audit Summary.html"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Resource",
       "source_relative_path": "articles/Contributing/Making a Pull Request/Build Log Example.png",
       "output": {
