--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -3363,6 +3363,16 @@
       "version": ""
     },
     {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/IconExtraction.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/IconExtraction.html"
+        }
+      },
+      "version": ""
+    },
+    {
       "type": "Resource",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/Images/ButtonSpecProperties.png",
       "output": {
@@ -4894,6 +4904,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/KryptonThemedSystemMenu.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/KryptonThemedSystemMenu.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/KryptonToastNotification.md",
       "output": {
         ".html": {
@@ -4978,6 +4998,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Standard Toolkit/Toolkit/Theming.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/Utilities.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/Utilities.html"
         }
       },
       "version": ""
