--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -3214,6 +3214,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/ButtonValuesThemeIntegration.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/ButtonValuesThemeIntegration.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/Components.md",
       "output": {
         ".html": {
@@ -3368,6 +3378,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Standard Toolkit/Toolkit/IconExtraction.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/IconExtractionWithFallback.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/IconExtractionWithFallback.html"
         }
       },
       "version": ""
@@ -4914,6 +4934,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/KryptonThemedSystemMenuAPIDocumentation.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/KryptonThemedSystemMenuAPIDocumentation.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/KryptonToastNotification.md",
       "output": {
         ".html": {
@@ -4984,6 +5014,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/ThemeAwareIconSelection.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/ThemeAwareIconSelection.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/ThemeColorDescriptions.md",
       "output": {
         ".html": {
@@ -4998,6 +5038,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Standard Toolkit/Toolkit/Theming.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/UACShieldImplementation.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/UACShieldImplementation.html"
         }
       },
       "version": ""
