--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -164,6 +164,8 @@
               href: Standard Toolkit/Toolkit/KryptonForm.md
             - name: KryptonThemedSystemMenu
               href: Standard Toolkit/Toolkit/KryptonThemedSystemMenu.md
+            - name: AdministratorSuffixFeatureforKryptonForm
+              href: Standard Toolkit/Toolkit/AdministratorSuffixFeatureforKryptonForm.md
         - name: Theming
           href: Standard Toolkit/Toolkit/Theming.md
           items:
