--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -4874,6 +4874,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/KryptonSystemMenu.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/KryptonSystemMenu.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/KryptonTableLayoutPanel.md",
       "output": {
         ".html": {
@@ -5038,6 +5048,16 @@
       "output": {
         ".html": {
           "relative_path": "articles/Standard Toolkit/Toolkit/ThemeColorDescriptions.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/ThemedSystemMenu.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/ThemedSystemMenu.html"
         }
       },
       "version": ""
