--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -84,6 +84,8 @@
               href: Standard Toolkit/Toolkit/KryptonPictureBox.md
             - name: KryptonProgressBar
               href: Standard Toolkit/Toolkit/KryptonProgressBar.md
+            - name: KryptonPoweredByButton
+              href: Standard Toolkit/Toolkit/KryptonPoweredByButton.md
             - name: KryptonPropertyGrid
               href: Standard Toolkit/Toolkit/KryptonPropertyGrid.md
             - name: KryptonRadioButton
