--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -4984,6 +4984,16 @@
     },
     {
       "type": "Conceptual",
+      "source_relative_path": "articles/Standard Toolkit/Toolkit/KryptonPoweredByButton.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Standard Toolkit/Toolkit/KryptonPoweredByButton.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
       "source_relative_path": "articles/Standard Toolkit/Toolkit/KryptonPrintDialog.md",
       "output": {
         ".html": {
