* Update workflow documentation

--- a/Source/Help/DocFX/articles/toc.yml
+++ b/Source/Help/DocFX/articles/toc.yml
@@ -343,15 +343,17 @@
     - name: GitHub Actions Workflows
       href: Contributing/GitHubActionsIndex.md
     - name: How to Build the Standard Toolkit
-      href: Contributing/HowtoBuild.md
+      href: Contributing/HowToBuild.md
     - name: How to Create a Pull Request
-      href: Contributing/HowtoCreateaPullRequest.md
+      href: Contributing/HowtoCreateAPullRequest.md
     - name: How to Create the API Reference
-      href: Contributing/HowtoCreatetheAPIReference.md
+      href: Contributing/HowtoCreateTheAPIReference.md
     - name: How to Manage 'Using' Statements
-      href: Contributing/HowtoManageUsingStatements.md
+      href: Contributing/HowToManageUsingStatements.md
     - name: Krypton RTL Audit Summary
-      href: Contributing/KryptonRTLAuditSummary.md
+      href: Contributing/Auditing/KryptonRTLAuditSummary.md
+    - name: Krypton Toolkit Audit
+      href: Contributing/Auditing/KryptonToolkitAudit.md
     - name: Using Custom Pre Processor Directives
       href: Contributing/UsingCustomPreProcessorDirectives.md
     - name: Using File Scoped Namespaces
