--- a/Source/Help/Output/manifest.json
+++ b/Source/Help/Output/manifest.json
@@ -104,10 +104,110 @@
     },
     {
       "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/BuildSystem.md",
+      "source_relative_path": "articles/Contributing/Build System/BuildScripts.md",
       "output": {
         ".html": {
-          "relative_path": "articles/Contributing/BuildSystem.html"
+          "relative_path": "articles/Contributing/Build System/BuildScripts.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/BuildSystemOverview.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/BuildSystemOverview.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/DirectoryBuildConfiguration.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/DirectoryBuildConfiguration.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/GitHubActionsWorkflows.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/GitHubActionsWorkflows.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/LocalDevelopmentWorkflow.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/LocalDevelopmentWorkflow.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/MSBuildProjectFiles.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/MSBuildProjectFiles.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/ModernBuildTool.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/ModernBuildTool.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/NuGetPackaging.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/NuGetPackaging.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/Troubleshooting.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/Troubleshooting.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/Build System/VersionManagement.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/Build System/VersionManagement.html"
+        }
+      },
+      "version": ""
+    },
+    {
+      "type": "Conceptual",
+      "source_relative_path": "articles/Contributing/BuildSystemDocumentationIndex.md",
+      "output": {
+        ".html": {
+          "relative_path": "articles/Contributing/BuildSystemDocumentationIndex.html"
         }
       },
       "version": ""
@@ -338,46 +438,6 @@
       "output": {
         ".html": {
           "relative_path": "articles/Contributing/UsingtheMSBuildLogViewer.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/Workflows/BuildWorkflow.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/Contributing/Workflows/BuildWorkflow.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/Workflows/GitHubWorkflows.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/Contributing/Workflows/GitHubWorkflows.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/Workflows/NightlyWorkflow.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/Contributing/Workflows/NightlyWorkflow.html"
-        }
-      },
-      "version": ""
-    },
-    {
-      "type": "Conceptual",
-      "source_relative_path": "articles/Contributing/Workflows/ReleaseWorkflow.md",
-      "output": {
-        ".html": {
-          "relative_path": "articles/Contributing/Workflows/ReleaseWorkflow.html"
         }
       },
       "version": ""
